dependencies: update rusqlite to 0.29.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ codegen-units = 1
 csv = "1.2.2"
 regex = "1.9.1"
 reqwest = { version = "0.11", features = ["blocking"] }
-rusqlite = "0.27.0"
+rusqlite = "0.29.0"
 serde_json = "1.0"
 sha2 = "0.10"
 
@@ -35,5 +35,9 @@ sha2 = "0.10"
 # pinning them here also guarantees that a `cargo update` will not update them
 # to a newer version. Cargo.lock does not do that.
 
+# Pin hashlink to 0.8.1, because later versions depend on hashbrown 0.14 which
+# needs rustc 1.65, but our MSRV is 1.63.0. It also avoids some crate
+# duplication.
+hashlink = "=0.8.1"
 # Pin time to 0.3.20, because 0.3.21 needs rustc 1.65, but our MSRV is 1.63.0.
 time = { version = "=0.3.20", features = ["formatting", "parsing"] }
