--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,7 +15,7 @@ updates:
     ignore:
       # Updating some of our dependencies would break the MSRV build, so they
       # are ignored.
-      - dependency-name: "security-framework-sys"
+      - dependency-name: "hashlink"
       - dependency-name: "time"
   - package-ecosystem: "github-actions"
     directory: "/"
