--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ alpine:
     - cargo --version
     - cargo run -- version
     - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
-    - cargo test || cargo test || cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test
 
 build_image_bionic:
   image: docker:20
@@ -86,7 +86,7 @@ rocky:
     - cargo --version
     - cargo run -- version
     - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
-    - cargo test || cargo test || cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test
 
 build_image_debian:
   image: docker:20
@@ -119,7 +119,7 @@ debian:
     - cargo --version
     - cargo run -- version
     - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
-    - cargo test || cargo test || cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test
 
 clippy:
   image: alpine:latest
