--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,7 @@ updates:
     ignore:
       # Updating some of our dependencies would break the MSRV build, so they
       # are ignored.
+      - dependency-name: "ahash"
       - dependency-name: "hashlink"
       - dependency-name: "regex"
       - dependency-name: "time"
