--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       # Updating some of our dependencies would break the MSRV build, so they
       # are ignored.
       - dependency-name: "ahash"
+      - dependency-name: "bumpalo"
       - dependency-name: "hashlink"
       - dependency-name: "regex"
       - dependency-name: "time"
