--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ codegen-units = 1
 csv = "1.2.2"
 # Pin regex to 1.9.6, because later versions need rustc 1.65.
 regex = "=1.9.6"
-reqwest = { version = "0.11", features = ["blocking"] }
 rusqlite = "0.29.0"
 sha2 = "0.10"
+ureq = "2.9.6"
 
 # The dependencies below are not really direct dependencies. They are just a
 # way of pinning certain crates to certain versions to ensure we stay true to
