--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,7 @@ updates:
       - dependency-name: "hashlink"
       - dependency-name: "regex"
       - dependency-name: "time"
+      - dependency-name: "url"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
