--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,5 @@ ahash = { version = "=0.8.7", default-features = false }
 hashlink = "=0.8.2"
 # Pin time to 0.3.20, because 0.3.21 needs rustc 1.65, but our MSRV is 1.63.0.
 time = { version = "=0.3.20", features = ["formatting", "parsing"] }
+# Pin url to 2.5.0, because 2.5.1 needs rustc 1.67, but our MSRV is 1.63.0.
+url = "=2.5.0"
