dependencies: pin cc to 1.0.105 for MSRV 1.63.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
       # are ignored.
       - dependency-name: "ahash"
       - dependency-name: "bumpalo"
+      - dependency-name: "cc"
       - dependency-name: "hashlink"
       - dependency-name: "regex"
       - dependency-name: "time"
