ci: retry tests in GitHub Actions less often on failure
The problematic stuff from the disease.sh API is long gone, so
the repetition count can be decreased.

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Show version information
       run: cargo run -- version
     - name: Run tests
-      # network tests can be a bit flaky, so try up to three times
-      run: cargo test || cargo test || cargo test
+      # network tests can be a bit flaky, so try up to two times
+      run: cargo test || cargo test
