--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build application
       run: cargo build --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }}
     - name: Run tests
-      # network tests can be a bit flaky, so try up to three times
-      run: cargo test --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }} || cargo test --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }} || cargo test --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }}
+      # network tests can be a bit flaky, so try up to two times
+      run: cargo test --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }} || cargo test --verbose --target ${{ matrix.arch }}-pc-windows-${{ matrix.variant }}
