--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Install packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y cargo rustc libssl-dev pkg-config
+        sudo apt-get install -y cargo rustc libsqlite3-dev libssl-dev pkg-config
     - name: Build application
       run: |
         cargo build
