dependencies: pin ureq to 2.10.1 for MSRV 1.63.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,7 @@ updates:
       - dependency-name: "hashlink"
       - dependency-name: "regex"
       - dependency-name: "rustls"
+      - dependency-name: "ureq"
       - dependency-name: "url"
   - package-ecosystem: "github-actions"
     directory: "/"
