--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ csv = "=1.3.0"
 regex = "=1.9.6"
 rusqlite = "0.29.0"
 sha2 = "0.10"
-ureq = "2.9.6"
+# Pin ureq to 2.10.1, because later versions need rustc 1.67.
+ureq = "=2.10.1"
 
 # The dependencies below are not really direct dependencies. They are just a
 # way of pinning certain crates to certain versions to ensure we stay true to
