ci: do not retry tests in GitHub Actions workflows after failure
The retry was originally introduced to reduce the chance of
failing the build when some flaky network-related tests failed.
However, the network-related code and its tests are gone, so it
is enough to try the tests only once.

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -21,5 +21,4 @@ jobs:
     - name: Show version information
       run: cargo run -- version
     - name: Run tests
-      # network tests can be a bit flaky, so try up to two times
-      run: cargo test || cargo test
+      run: cargo test
