--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -26,6 +26,5 @@ jobs:
       run: |
         cargo run -- version
     - name: Run tests
-      # network tests can be a bit flaky, so try up to two times
       run: |
-        cargo test || cargo test
+        cargo test
