ci: do not retry tests in GitLab pipelines after failure
The retry was originally introduced to reduce the chance of
failing the build when some flaky network-related tests failed.
However, the network-related code and its tests are gone, so it
is enough to try the tests only once.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ alpine:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test
+    - cargo test
 
 build_image_bionic:
   image: docker:27
@@ -87,7 +87,7 @@ rocky:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test
+    - cargo test
 
 build_image_debian:
   image: docker:27
@@ -119,7 +119,7 @@ debian:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test
+    - cargo test
 
 clippy:
   image: alpine:latest
