dependencies: pin once_cell to 1.20.3 for MSRV 1.63.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       # Updating some of our dependencies would break the MSRV build, so they
       # are ignored.
       - dependency-name: "csv"
+      - dependency-name: "once_cell"
       - dependency-name: "regex"
   - package-ecosystem: "github-actions"
     directory: "/"
