--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,13 @@ csv = "=1.3.0"
 regex = "=1.9.6"
 rusqlite = "0.31.0"
 sha2 = "0.10"
+
+# The dependencies below are not really direct dependencies. They are just a
+# way of pinning certain crates to certain versions to ensure we stay true to
+# this project's MSRV. I know there is Cargo.lock to lock versions down, but
+# pinning them here also guarantees that a `cargo update` will not update them
+# to a newer version. Cargo.lock does not do that.
+
+# Pin once_cell to 1.20.3, because later versions need rustc 1.70+.
+[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
+once_cell = { version = "=1.20.3", default-features = false, features = ["alloc"] }
