--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4.40", default-features = false, features = ["alloc", "now"] }
 # Pinned to 1.3.0, because 1.3.1 would required rustc 1.65+, but MSRV is 1.63.0.
 csv = "=1.3.0"
 # Pin regex to 1.9.6, because later versions need rustc 1.65.
