--- a/ci/Dockerfile_rocky
+++ b/ci/Dockerfile_rocky
@@ -1,4 +1,4 @@
-FROM rockylinux:9
+FROM rockylinux/rockylinux:10
 # Always update packages first.
 RUN yum update -y && \
     # Install build dependencies.
