--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,7 +13,10 @@ jobs:
 # Change the line above to the following for more Rust channels:
 #       channel: [stable, beta, nightly]
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v5
+      with:
+        persist-credentials: false
     - run: choco install msys2
       if: matrix.variant == 'gnu'
     - run: rustup default ${{ matrix.channel }}-pc-windows-${{ matrix.variant }}
