--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -6,7 +6,10 @@ jobs:
   clippy:
     runs-on: ubuntu-24.04
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v5
+      with:
+        persist-credentials: false
     - name: Install packages
       run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget libssl-dev pkg-config
     - name: Rustup
