--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -8,7 +8,10 @@ jobs:
   msrv:
     runs-on: ubuntu-24.04
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v5
+      with:
+        persist-credentials: false
     - name: Install packages
       run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget libssl-dev pkg-config
     - name: Rustup MSRV
