--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ codegen-units = 1
 
 [dependencies]
 chrono = { version = "0.4.40", default-features = false, features = ["alloc", "now"] }
-# Pinned to 1.3.0, because 1.3.1 would required rustc 1.65+, but MSRV is 1.63.0.
-csv = "=1.3.0"
+csv = "1.3.1"
 # Pin regex to 1.9.6, because later versions need rustc 1.65.
 regex = "=1.9.6"
 rusqlite = "0.31.0"
