--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,7 @@ codegen-units = 1
 [dependencies]
 chrono = { version = "0.4.40", default-features = false, features = ["alloc", "now"] }
 csv = "1.3.1"
-# Pin regex to 1.9.6, because later versions need rustc 1.65.
-regex = "=1.9.6"
+regex = "1.11.1"
 rusqlite = "0.31.0"
 sha2 = "0.10"
 
