ci: quick fix to install Rust 1.75.0 on bionic image
It may possibly be better to remove the Ubuntu bionic stuff from
the CI. However, that means there will be no more test for older
versions of SQLite.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,13 @@ bionic_failcheck:
     - apt-get update
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get upgrade -y
+    - apt-get purge -y cargo rustc
+    - apt-get install -y wget
+    - wget -O /tmp/ru.sh https://sh.rustup.rs
+    - chmod u+x /tmp/ru.sh
+    - /tmp/ru.sh -y --default-toolchain 1.75.0 --profile minimal
+    - source $HOME/.cargo/env
+    - export PATH="$HOME/.cargo/bin:$PATH"
   script:
     - rustc --version
     - cargo --version
